# k1

./: .gitignore  README.md  app.py  extractor.py  k1_diagnostic.py  main.py  models.py  patterns.py  pyproject.toml  requirements.txt  table_extractor.py  test_extractor.py  test_models.py  test_setup.py
Archive/: debug_extraction.json  extracted_k1_data.json  k1_test_results.json  robust_k1_extractor.py  test_extraction.py  test_extraction2.py
Archive/Tests/: test_results.json  test_results2.json  test_simple_k1_2024.py
Output/: k1_extract_OCR.csv  k1_extract_PDF.csv
