[project]
name = "k1-reader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "camelot-py>=1.0.9",
    "colorama>=0.4.6",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "tabula-py>=2.10.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "uvicorn>=0.35.0",
]
